# pytools

./: .coveragerc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycitizen/: __init__.py  aws_utils.py  data_cleaning.py  dev_utils.py  exceptions.py  predicates.py  utils.py
src/pytools/: __init__.py  aws_utils.py  data_cleaning.py  dev_utils.py  exceptions.py
tests/: test_aws_creds.csv  test_aws_utils.py  test_data_cleaning.py  test_data_frame.csv  test_pycitizen.py
