[tool.poetry]
name = "pycitizen"
version = "0.1.0"
description = "A Python toolkit for Citizen"
authors = ["Yang Wu"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
botocore = ">=1.21.63"
boto3 = ">=1.18.21"
pandas = ">=1.4.1"
psycopg2 = ">=2.8.6"
category-encoders = ">=2.3.0"
numpy = ">=1.22.2"
datatable = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
